# youtube-analytics-project

./: pyproject.toml
homework-1/: main.py
homework-2/: moscowpython.json
src/: channel.py  video.py
