[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["stas <stasyllius@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.95.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
